Initial commit - Hostel PG Management System

--- a/templates/login.html
+++ b/templates/login.html
@@ -158,6 +158,19 @@
       #signup-form {
         display: none;
       }
+      .back{
+        display: flex;
+        justify-content: end;
+        align-items: end;
+
+      }
+      .back a{
+        color: darkmagenta;
+      }
+      .back a:hover{
+        color: red;
+      }
+
 
       footer {
         display: flex;
@@ -168,6 +181,7 @@
         height: 7%;
         background-color: lightsteelblue;
       }
+     
     </style>
   </head>
   <body>
@@ -213,8 +227,10 @@
               
               <button type="submit" onclick="loginBtn()">Login</button>
             </div>
+            <p class="back">Back to  <a href="/"> Student login</a></p>
            
           </form>
+          
 
        
           
