Initial commit - Hostel PG Management System

--- a/templates/login.html
+++ b/templates/login.html
@@ -205,10 +205,10 @@
     <main>
       <section class="Athentication">
         <div class="Text">
-          <h2>Hostel/PG Management System</h2>
+          <h2>Hostel or PG Management System</h2>
           <br />
           <p>
-            The Hostel / PG Management System is a web-based application<br>developed to simplify and automate the daily administrative tasks<br> of hostel or paying guest accommodations. Traditional hostel <br>management systems rely heavily on manual record keeping,<br> which is time-consuming, error-prone, and difficult to maintain.<br> This project aims to replace the manual system with an efficient,<br> reliable, and user-friendly digital solution.
+            The Hostel or PG Management System is a web-based application<br>developed to simplify and automate the daily administrative tasks<br> of hostel or paying guest accommodations. Traditional hostel <br>management systems rely heavily on manual record keeping,<br> which is time-consuming, error-prone, and difficult to maintain.<br> This project aims to replace the manual system with an efficient,<br> reliable, and user-friendly digital solution.
           </p>
         </div>
         <div class="forms">
