--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -92,6 +92,8 @@
 
 <div class="sidebar">
     <h2>Student</h2>
+    <a href="/student_room" target="frame">View Room Details</a>
+
     <a href="/student_complaint" target="frame">Submit Complaint</a>
     <a href="/view_complaints" target="frame">View Complaints</a>
     <a href="/student_payments" target="frame">Payments</a>
