--- a/templates/students.html
+++ b/templates/students.html
@@ -45,7 +45,7 @@
         button {
             grid-column: span 2;
             padding: 12px;
-            background: plum;
+            background: black;
             color: white;
             font-size: 16px;
             border: none;
@@ -55,6 +55,7 @@
 
         button:hover {
             background: lightsteelblue;
+            color: black;
         }
 
         table {
@@ -69,7 +70,7 @@
         }
 
         th {
-            background: plum;
+            background: black;
             color: white;
         }
 
