Initial commit - Hostel PG Management System

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -107,6 +107,7 @@
 <a href="/students" target="contentFrame">Students</a>
 <a href="/payments" target="contentFrame">Payments</a>
 <a href="/complaints" target="contentFrame">Complaints</a>
+<a href="/admin_change_password" target="contentFrame">Change Password</a>
 <a href="/logout">Logout</a>  
 
     </div>
