--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -97,6 +97,7 @@
     <a href="/student_complaint" target="frame">Submit Complaint</a>
     <a href="/view_complaints" target="frame">View Complaints</a>
     <a href="/student_payments" target="frame">Payments</a>
+    <a href="/student_change_password" target="frame">Change Password</a>
     <a href="/student_logout">Logout</a>
 </div>
 
