--- a/templates/payments.html
+++ b/templates/payments.html
@@ -105,19 +105,30 @@
 
 <table>
     <tr>
-        <th>Student</th>
+        <th>Student Name</th>
         <th>Amount</th>
         <th>Date</th>
+        <th>Action</th>
     </tr>
 
-    {% for p in payments %}
+    {% for payment in payments %}
     <tr>
-        <td>{{ p[0] }}</td>
-        <td>₹ {{ p[1] }}</td>
-        <td>{{ p[2] }}</td>
+        <td>{{ payment.name }}</td>
+        <td>{{ payment.amount }}</td>
+        <td>{{ payment.payment_date }}</td>
+        <td>
+            <form action="/delete_payment/{{ payment.id }}" method="post" style="display:inline;">
+                <button type="submit"
+                        onclick="return confirm('Are you sure you want to delete this payment?')"
+                        style="background:#8b5e34;color:white;border:none;padding:5px 10px;border-radius:4px;">
+                    Delete
+                </button>
+            </form>
+        </td>
     </tr>
     {% endfor %}
 </table>
+
 
 </body>
 </html>
