--- a/templates/students.html
+++ b/templates/students.html
@@ -101,8 +101,13 @@
     <!-- Add Student Form -->
     <form method="post">
         <input type="text" name="name" placeholder="Student Name" required>
+
         <input type="email" name="email" placeholder="Email" required>
-        <input type="text" name="password" placeholder="Password" required>
+
+        <input type="text" name="phone" placeholder="Phone Number" required
+               pattern="[0-9]{10}" title="Enter 10 digit phone number">
+
+        <input type="password" name="password" placeholder="Password" required>
 
         <select name="room_id" required>
             <option value="">Select Room</option>
@@ -119,6 +124,7 @@
         <tr>
             <th>Name</th>
             <th>Email</th>
+            <th>Phone</th>
             <th>Room</th>
             <th>Action</th>
         </tr>
@@ -128,6 +134,7 @@
             <td>{{ s[1] }}</td>
             <td>{{ s[2] }}</td>
             <td>{{ s[3] }}</td>
+            <td>{{ s[4] }}</td>
             <td>
                 <form action="/delete_student/{{ s[0] }}" method="post"
                       onsubmit="return confirm('Are you sure you want to delete this student?');">
